--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="noSurf" class="menu-hide" >
-    
+
     <head>
         <title>Praianos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -303,13 +303,24 @@
                                         <script>
                                                                 (adsbygoogle = window.adsbygoogle || []).push({});
                                         </script>-->
+                    <!--                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                                         Praianos3 
+                                        <ins class="adsbygoogle"
+                                             style="display:block"
+                                             data-ad-client="ca-pub-8292462256462069"
+                                             data-ad-slot="6774236433"
+                                             data-ad-format="auto"></ins>
+                                        <script>
+                                                                (adsbygoogle = window.adsbygoogle || []).push({});
+                                        </script>-->
+
+
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- Praianos3 -->
+                    <!-- Praianos4 -->
                     <ins class="adsbygoogle"
-                         style="display:block"
+                         style="display:inline-block;width:728px;height:50px"
                          data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="6774236433"
-                         data-ad-format="auto"></ins>
+                         data-ad-slot="1755280831"></ins>
                     <script>
                                             (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
