--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
                                                                 (adsbygoogle = window.adsbygoogle || []).push({});
                                         </script>-->
 
-
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- Praianos4 -->
+                    <!-- Praianos2 -->
                     <ins class="adsbygoogle"
-                         style="display:inline-block;width:728px;height:50px"
+                         style="display:block"
                          data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="1755280831"></ins>
+                         data-ad-slot="5297503230"
+                         data-ad-format="link"></ins>
                     <script>
                                             (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
