--- a/index.html
+++ b/index.html
@@ -294,33 +294,12 @@
             </div>
             <div class="row rodape">
                 <div class="col-md-12">
-                    <!--                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                                         Praianos 
-                                        <ins class="adsbygoogle"
-                                             style="display:inline-block;width:728px;height:70px"
-                                             data-ad-client="ca-pub-8292462256462069"
-                                             data-ad-slot="5075994036"></ins>
-                                        <script>
-                                                                (adsbygoogle = window.adsbygoogle || []).push({});
-                                        </script>-->
-                    <!--                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                                         Praianos3 
-                                        <ins class="adsbygoogle"
-                                             style="display:block"
-                                             data-ad-client="ca-pub-8292462256462069"
-                                             data-ad-slot="6774236433"
-                                             data-ad-format="auto"></ins>
-                                        <script>
-                                                                (adsbygoogle = window.adsbygoogle || []).push({});
-                                        </script>-->
-
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- Praianos2 -->
+                    Praianos 
                     <ins class="adsbygoogle"
-                         style="display:block"
+                         style="display:inline-block;width:100%;height:50px"
                          data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="5297503230"
-                         data-ad-format="link"></ins>
+                         data-ad-slot="5075994036"></ins>
                     <script>
                                             (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
