--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="row rodape">
                 <div class="col-md-12">
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    Praianos 
+                    <!--Praianos--> 
                     <ins class="adsbygoogle"
                          style="display:inline-block;width:100%;height:50px"
                          data-ad-client="ca-pub-8292462256462069"
