--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <nav class="menu">
             <div class="col-md-12">
 
-                <span >{{obj_pra.name||'Local'}}</span>
+                <div >{{obj_pra.name||'Local'}}</div>
 
 
-                <span>{{atualMarine.WindChillC}}&#176;C</span>
+                <div>{{atualMarine.WindChillC}}&#176;C</div>
 
             </div>
             <ul class="list-group" style="position: relative;">
@@ -86,8 +86,19 @@
                         <option value="">Selecione a Praia (Tot: {{obj_cid.praias.length|| 0}})</option>
                     </select>
                 </li>
+                <li class="list-group-item">
+                    <input type="text" class="form-control" ng-model="busca" />
+                    <div class="search-praias">
+                        <div ng-repeat="it1 in locais">
+                            <div  ng-repeat="it2 in it1.cidades">
+                                <div  ng-repeat="it3 in it2.praias| filter:{'name':busca}">
+                                    {{it3.name}}
+                                </div>
 
-
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </nav>
         <div class="over-layer"></div>
@@ -294,15 +305,28 @@
             </div>
             <div class="row rodape">
                 <div class="col-md-12">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!--Praianos--> 
+
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- Praianos2 -->
                     <ins class="adsbygoogle"
-                         style="display:inline-block;width:100%;height:50px"
+                         style="display:block"
                          data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="5075994036"></ins>
+                         data-ad-slot="5297503230"
+                         data-ad-format="link"></ins>
                     <script>
-                                            (adsbygoogle = window.adsbygoogle || []).push({});
+                                                                (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
+
+
+                    <!--                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                                        Praianos 
+                                        <ins class="adsbygoogle"
+                                             style="display:inline-block;width:100%;height:50px"
+                                             data-ad-client="ca-pub-8292462256462069"
+                                             data-ad-slot="5075994036"></ins>
+                                        <script>
+                                                                (adsbygoogle = window.adsbygoogle || []).push({});
+                                        </script>-->
                 </div>
             </div>
         </div>
