--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <div class="nomes-locais">
                         <div ng-show="objPraiaAtual" style="font-size: 1.2em;">{{objPraiaAtual.name| uppercase}}</div>
                     </div>
-<!--                    <div class="option">
-                        <span class="glyphicon glyphicon-option-vertical"></span>
-                    </div>-->
+                    <!--                    <div class="option">
+                                            <span class="glyphicon glyphicon-option-vertical"></span>
+                                        </div>-->
                 </div>
                 <div class="col-md-12 tab-menu">
                     <ul>
@@ -294,30 +294,19 @@
                 </div>
             </div>
             <div class="row rodape">
-                <div class="col-md-12">
-
+                <div>
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- Praianos2 -->
+                    <!-- Praianos3 -->
                     <ins class="adsbygoogle"
                          style="display:block"
                          data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="5297503230"
-                         data-ad-format="link"></ins>
+                         data-ad-slot="6774236433"
+                         data-ad-format="auto"></ins>
                     <script>
                                             (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-
-
-                    <!--                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                                        Praianos 
-                                        <ins class="adsbygoogle"
-                                             style="display:inline-block;width:100%;height:50px"
-                                             data-ad-client="ca-pub-8292462256462069"
-                                             data-ad-slot="5075994036"></ins>
-                                        <script>
-                                                                (adsbygoogle = window.adsbygoogle || []).push({});
-                                        </script>-->
                 </div>
+
             </div>
         </div>
 
@@ -417,14 +406,20 @@
 
                 </div>
                 <div class="col-md-12 modal-foot">
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <ins class="adsbygoogle"
-                         style="display:inline-block;width:100%;height:90px;"
-                         data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="5075994036"></ins>
-                    <script>
+                    <div>
+                        <div>
+                            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                            <!-- Praianos3 -->
+                            <ins class="adsbygoogle"
+                                 style="display:block"
+                                 data-ad-client="ca-pub-8292462256462069"
+                                 data-ad-slot="6774236433"
+                                 data-ad-format="auto"></ins>
+                            <script>
                                                     (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
+                            </script>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -529,14 +524,20 @@
 
                 </div>
                 <div class="col-md-12 modal-foot">
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <ins class="adsbygoogle"
-                         style="display:inline-block;width:100%;height:90px;"
-                         data-ad-client="ca-pub-8292462256462069"
-                         data-ad-slot="5075994036"></ins>
-                    <script>
+                    <div>
+
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <!-- Praianos3 -->
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-8292462256462069"
+                             data-ad-slot="6774236433"
+                             data-ad-format="auto"></ins>
+                        <script>
                                                 (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
+                        </script>
+
+                    </div>
                 </div>
 
             </div>
