--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-12 modal-foot">
+                <div class="modal-foot">
                     <div>
                         <div>
                             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -523,7 +523,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-12 modal-foot">
+                <div class="modal-foot">
                     <div>
 
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
