--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <nav class="menu">
+        <nav class="menu menu-animate">
             <div class="col-md-12">
 
                 <div >{{objPraiaAtual.name||'Local'}}</div>
