--- a/index.html
+++ b/index.html
@@ -406,27 +406,27 @@
 
                 </div>
                 <div class="modal-foot">
-                    <div>
-                        <div>
-                            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                            <!-- Praianos3 -->
-                            <ins class="adsbygoogle"
-                                 style="display:block"
-                                 data-ad-client="ca-pub-8292462256462069"
-                                 data-ad-slot="6774236433"
-                                 data-ad-format="auto"></ins>
-                            <script>
+
+                    <div class="col-md-12">
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <!-- Praianos3 -->
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-8292462256462069"
+                             data-ad-slot="6774236433"
+                             data-ad-format="auto"></ins>
+                        <script>
                                                     (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
-                        </div>
+                        </script>
                     </div>
+
                 </div>
 
             </div>
 
         </div>
 
-        <div class="container-fluid modal-default modal-semanal" ng-show="modalShow.value == true && modalShow.modal == 'porHora'" >
+        <div class="container-fluid modal-default modal-semanal"  ng-show="modalShow.value == true && modalShow.modal == 'porHora'">
             <div class="row">
 
                 <div class="col-md-12 modal-head">
@@ -524,7 +524,7 @@
 
                 </div>
                 <div class="modal-foot">
-                    <div>
+                    <div class="col-md-12">
 
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- Praianos3 -->
@@ -550,5 +550,12 @@
     </body>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTbk54QQ8sHvqi0QhZ0HAAoQa_pllO4Co&callback=initMap"
     async defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+                                        (adsbygoogle = window.adsbygoogle || []).push({
+                                            google_ad_client: "ca-pub-8292462256462069",
+                                            enable_page_level_ads: true
+                                        });
+    </script>
     <script src="resources/js/aux.js"></script>
 </html>
